# advent-of-code

./: aoc.py  day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-06.py  day-07.py  day-08.py  day-09.py  day-10.py  day-11.py  day-12.py  day-13.py  day-14.py  day-15.py  day-16.py  day-17.py  day-18.py  day-19.py  day-21.py  day-22.py  day-23.py  day-24.py  day-25.py
day-20/: Cargo.toml  build.rs  input.txt
day-20/src/: grid.rs  main.rs  types.rs
extra/: day-15.rs
