[package]
name = "day-20"
version = "0.1.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
lazy_static = "1.4.0"
regex = "1.4.2"
yall = "0.5.0"
